--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
 html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
+    background-color: rgb(244 213 141);
 }
 
 *,
 *::before,
 *::after {
     box-sizing: border-box;
+}
+
+header>h1 {
+    text-align: center;
+}
+
+.game-board {
+    display: grid;
+    width: min-content;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: repeat(3, 150px);
+    gap: 15px;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: rgb(182 23 75);
+    box-shadow: 5px 5px 10px rgb(0 0 0 / 0.4);
+}
+
+.cell {
+    background-color: rgb(242 190 252);
 }
