--- a/style.css
+++ b/style.css
@@ -77,8 +77,28 @@ header>h1 {
     margin: 0 0.3em;
 }
 
+.controls {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    gap: 20px;
+    margin: 1rem 0;
+    align-items: center;
+    justify-content: center;
+}
+
+#next-round {
+    font-size: 1.5rem;
+    background-color: rgb(204, 221, 226);
+    color: rgb(0 0 0);
+    border: none;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 0.3);
+    padding: 0.3em 0.7em;
+    border-radius: 5px;
+}
+
 #restart {
-    margin-left: 1em;
+    grid-column: 1/-1;
+    justify-self: center;
     font-size: 1.5rem;
     background-color: rgb(182 23 75);
     color: rgb(239 239 239);
@@ -86,13 +106,6 @@ header>h1 {
     box-shadow: 2px 2px 5px rgb(0 0 0 / 0.3);
     padding: 0.3em 0.7em;
     border-radius: 5px;
-}
-
-.controls {
-    display: flex;
-    margin: 1rem 0;
-    align-items: center;
-    justify-content: center;
 }
 
 .final-result {
