--- a/style.css
+++ b/style.css
@@ -88,12 +88,13 @@ header>h1 {
 
 #next-round {
     font-size: 1.5rem;
-    background-color: rgb(204, 221, 226);
+    background-color: rgb(239 239 239);
     color: rgb(0 0 0);
     border: none;
     box-shadow: 2px 2px 5px rgb(0 0 0 / 0.3);
     padding: 0.3em 0.7em;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 #restart {
@@ -106,6 +107,7 @@ header>h1 {
     box-shadow: 2px 2px 5px rgb(0 0 0 / 0.3);
     padding: 0.3em 0.7em;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .final-result {
