--- a/style.css
+++ b/style.css
@@ -126,4 +126,11 @@ header>h1 {
     text-align: center;
     font-size: 1.2rem;
     margin: 1rem auto;
+    padding: 0.3em;
+}
+
+.final-result.final {
+    background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+    color: rgb(239 239 239);
+    font-weight: bolder;
 }
