--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ html {
     box-sizing: border-box;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
 header>h1 {
     text-align: center;
     font-size: 2.2rem;
@@ -138,4 +143,12 @@ header>h1 {
     background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
     color: rgb(239 239 239);
     font-weight: bolder;
+}
+
+.instruction {
+    position: absolute;
+    top: 10vh;
+    left: -10px;
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
 }
