--- a/style.css
+++ b/style.css
@@ -137,6 +137,8 @@ header>h1 {
     font-size: 1.2rem;
     margin: 1rem auto;
     padding: 0.3em;
+    width: max-content;
+    border-radius: 5px;
 }
 
 .final-result.final {
